# musicshare-api

./: .env  .gitignore  Cargo.toml  README.md  index.html  test.html  testdownload.html
migrations/: migrations.sql
src/: ctx.rs  error.rs  main.rs  model.rs  terminal-musicshare-api.code-workspace
src/db/: mod.rs
src/media/: broadcaster.rs  converter.rs  file_manager.rs  fileloader.rs  mod.rs
src/middlewares/: mod.rs  mw.rs
src/models/: mod.rs  peer.rs  queue.rs  session.rs
src/routes/: create_session.rs  mod.rs  routes_admin.rs  routes_control.rs  routes_login.rs  routes_session.rs  session.rs
src/sessions/: mod.rs  model.rs
src/utils/: error.rs
tests/: quickdev.rs
