[package]
name = "musicshare-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tower-http = { version = "0.4", features = ["fs", "cors"] }
gstreamer = "0.20"
gstreamer-audio = "0.20"
gstreamer-app = "0.20"
uuid = { version = "1", features = ["v4"] }
webrtc = "0.12"
yt-dlp = "1.2.3"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"