[package]
name = "musicshare-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
axum = "0.6"

tower-http = { version = "0.4", features = ["fs", "cors"] }
tower-cookies = "0.9"

uuid = { version = "1", features = ["v4"] }

webrtc = "0.12"
futures = "0.3.31"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"]}
dotenvy = "0.15.7"

reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"